# Fraud-Analytics-pipeline

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: mlops-pipeline.yml
config/: config.yaml
reports/figures/: lime_explanation.html
src/data/: generate_mock_data.py  ingest.py  preprocess.py
src/features/: build_features.py
src/models/: evaluate.py  predict_model.py  train_model.py
src/utils/: config.py  logger.py
tests/: test_data.py  test_features.py  test_models.py
