[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-analytics-pipeline"
version = "0.1.0"
description = "Enterprise-grade ensembled credit card fraud detection MLOps pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
    "optuna>=3.2.0",
    "shap>=0.42.0",
    "lime>=0.2.0",
    "pyyaml>=6.0",
    "lightgbm>=3.3.5",
    "xgboost>=1.7.5",
    "torch>=2.0.0",
    "imbalanced-learn>=0.10.1",
]
